--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
     <script src="script.js"></script>
     <script type="text/template" id="commitTpl">
+        <h2>Commits list</h2>
         <% commits.forEach(function(record) { %>
             <div class="commit media">
                 <a class="media-left">
